# leonard

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  architecture.md  spec.md
examples/: keytest.rs
src/: main.rs  tui.rs
tests/: prompt_tests.rs
