[package]
name = "leonard"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strip-ansi-escapes = "0.2"
time = { version = "0.3", features = ["local-offset", "formatting"] }
tokio = { version = "1.49.0", features = ["rt", "macros", "process", "signal", "io-util"] }
