[package]
name = "leonard"
version = "0.1.0"
edition = "2021"
description = "A driver/navigator orchestrator that coordinates Claude Code (driver) and Codex (navigator) in a collaborative coding loop"
license = "MIT"
authors = ["Leonard Contributors"]
keywords = ["ai", "coding-agent", "orchestrator", "claude", "codex"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strip-ansi-escapes = "0.2"
time = { version = "0.3", features = ["local-offset", "formatting"] }
tokio = { version = "1.49.0", features = ["rt", "macros", "process", "signal", "io-util", "time"] }